--- a/wiki-page-1/index.html
+++ b/wiki-page-1/index.html
@@ -10,7 +10,11 @@
         <h1>Crown Shyness</h1>
         <hr>
         <h6>From Wikipedia, the Free Encyclopedia</h6>
-        <i>For the album by Trash Boat, see Crown Shyness (album).</i>
+        <p>
+            <i>
+                For the album by Trash Boat, see Crown Shyness (album).
+            </i>
+        </p>
         <p>
             <b>Crown shyness</b> (also <i>canopy disengagement</i>,
             <sup>[1]</sup> <i>canopy shyness</i>,<sup>[2]</sup> or 
@@ -22,6 +26,7 @@
             <sup>[6][7]</sup> There exist many hypotheses as to why crown 
             shyness is an adaptive behavior, and research suggests that it might 
             inhibit spread of leaf-eating insect larvae.<sup>[8]</sup>
+        </p>
             <br>
             <br>
             <b>Contents</b>
