--- a/wiki-page-1/index.html
+++ b/wiki-page-1/index.html
@@ -27,24 +27,23 @@
             shyness is an adaptive behavior, and research suggests that it might 
             inhibit spread of leaf-eating insect larvae.<sup>[8]</sup>
         </p>
-            <br>
-            <br>
-            <b>Contents</b>
-            <ul>
-                <li>Possible physiological explanations</li>
-                <li>Species</li>
-                <li>References</li>
-                <li>External Links</li>
-            </ul>
-        </p>
+        <br>
+        <br>
+        <b>Contents</b>
+        <ul>
+            <li>Possible physiological explanations</li>
+            <li>Species</li>
+            <li>References</li>
+            <li>External Links</li>
+        </ul>
         <br>
         <h3>Possible Physiological Explanations</h3>
         <hr>
         <img
             src="images/canopy.jpg"
             width="200"
-            alt="Canopy of D. aromatica at the Forest Research Institute Malaysia 
-            displaying crown shyness"
+            alt="Canopy of D. aromatica at the Forest Research Institute 
+            Malaysia displaying crown shyness"
         >
         <p>
             The exact physiological basis of crown shyness is uncertain.
