--- a/recipe-page/index.html
+++ b/recipe-page/index.html
@@ -32,7 +32,7 @@
             want to dig into immediately—warm, satisfying, and incredibly 
             delicious!
         </p>
-        <a href="#">Jump to Recipe</a>
+        <a href="#recipe">Jump to Recipe</a>
         <hr>
 
         <h3>Dinner | Main Course</h3>
@@ -64,7 +64,7 @@
         <a href="#">Pin Recipe</a>
         <hr>
 
-        <h1>INGREDIENTS</h1>
+        <h1 id="recipe">INGREDIENTS</h1>
         <h3>Chicken</h3>
         <ul>
             <li>1 Pound chicken breast, about 2 large breasts</li>
@@ -155,7 +155,35 @@
                 Once the cheese is melted, fold in fresh parsley.
             </li>
             <h3>Assembly & Baking</h3>
-            
+            <li>
+                Preheat your oven to 350°F (175°C).
+            </li>
+            <br>
+            <li>
+                In your baking dish, combine the cooked pasta, sliced chicken, 
+                and Alfredo sauce until everything is evenly coated.
+            </li>
+            <br>
+            <li>
+                Top with shredded mozzarella cheese. Add a bit more chicken on 
+                top if you want.
+            </li>
+            <br>
+            <li>
+                Bake for 10-15 minutes, until the cheese is melted and slightly 
+                golden.
+            </li>
+            <br>
+            <li>
+                Switch the oven to broil and broil for 2-3 minutes until the top 
+                is bubbly and golden brown.
+            </li>
+            <br>
+            <li>
+                Serve warm to enjoy!
+            </li>
         </ol>
+        <h2>Tips & Notes</h2>
+        <p>Cut the recipe in half for a smaller portion.</p>
     </body>
 </html>
