--- a/html-potluck/index.html
+++ b/html-potluck/index.html
@@ -4,6 +4,9 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>HTML Potluck</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" 
+            integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" 
+            crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
@@ -66,8 +69,10 @@
             alt="rotten tomatoes scores"
         >
         <p>
+            <i class="fa-solid fa-clapperboard"></i>
             <b>Director/Producer/Writer:</b> Jack Huston
             <br>
+            <i class="fa-solid fa-masks-theater"></i>
             <b>Cast:</b> Michael Pitt, Ron Perlman, John Magaro, Steve Buscemi,
             Joe Pesci, Nicolette Robinson
         </p>
@@ -106,8 +111,10 @@
             alt="rotten tomatoes scores"
         >
         <p>
+            <i class="fa-solid fa-clapperboard"></i>
             <b>Director:</b> Robert Eggers
             <br>
+            <i class="fa-solid fa-masks-theater"></i>
             <b>Cast:</b> Lily-Rose Depp, Nicholas Hoult, Bill Skarsgard, 
             Willem Dafoe
         </p>
@@ -150,8 +157,10 @@
             alt="rotten tomatoes scores"
         >
         <p>
+            <i class="fa-solid fa-clapperboard"></i>
             <b>Director:</b> Coralie Fargeat
             <br>
+            <i class="fa-solid fa-masks-theater"></i>
             <b>Cast:</b> Demi Moore, Margaret Qualley, Dennis Quaid, 
             Hugo Diego Garcia
         </p>
