--- a/html-potluck/index.html
+++ b/html-potluck/index.html
@@ -188,7 +188,8 @@
             <a 
                 href="https://editorial.rottentomatoes.com/guide/best-new-movies/"
             >
-                Click Here >
+                Click Here 
+                <i class="fa-solid fa-arrow-down"></i>
             </a>
         </p>
         <img
