--- a/html-potluck/index.html
+++ b/html-potluck/index.html
@@ -55,6 +55,11 @@
         <hr>
         <h1 id="dotf">Day of the Fight</h1>
         <h4>2023</h4>
+        <i class="fa-solid fa-star"></i>
+        <i class="fa-solid fa-star"></i>
+        <i class="fa-solid fa-star"></i>
+        <i class="fa-solid fa-star"></i>
+        <i class="fa-regular fa-star"></i>
         <h3>Synopsis</h3>
         <p>
             On the day of his first fight since leaving prison, Mikey, once 
@@ -99,6 +104,11 @@
         <hr>
         <h1 id="nos">Nosferatu</h1>
         <h4>2024</h4>
+        <i class="fa-solid fa-star"></i>
+        <i class="fa-solid fa-star"></i>
+        <i class="fa-solid fa-star"></i>
+        <i class="fa-solid fa-star"></i>
+        <i class="fa-regular fa-star"></i>
         <h3>Synopsis</h3>
         <p>
             Robert Eggers' NOSFERATU is a gothic tale of obsession between a 
@@ -141,6 +151,11 @@
         <hr>
         <h1 id="sub">The Substance</h1>
         <h4>2024</h4>
+        <i class="fa-solid fa-star"></i>
+        <i class="fa-solid fa-star"></i>
+        <i class="fa-solid fa-star"></i>
+        <i class="fa-solid fa-star"></i>
+        <i class="fa-solid fa-star-half"></i>
         <h3>Synopsis</h3>
         <p>
             Have you ever dreamt of a better version of yourself? You, only 
