--- a/html-potluck/index.html
+++ b/html-potluck/index.html
@@ -155,7 +155,7 @@
         <i class="fa-solid fa-star"></i>
         <i class="fa-solid fa-star"></i>
         <i class="fa-solid fa-star"></i>
-        <i class="fa-solid fa-star-half"></i>
+        <i class="fa-regular fa-star-half-stroke"></i>
         <h3>Synopsis</h3>
         <p>
             Have you ever dreamt of a better version of yourself? You, only 
