--- a/html-potluck-2/index.html
+++ b/html-potluck-2/index.html
@@ -11,17 +11,28 @@
     </head>
     <body>
         <hr>
-        <h1>Playlist</h1>
+        <h1><i class="fa-solid fa-music"></i> Playlist</h1>
         <hr>
         <br>
+        <h4>Artist:</h4>
         <h2>Ray Lamontagne<h2>
         <img
             src="images/ray.jpg"
             width="450"
             alt="Ray Lamontagne live"
         >
+        <br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        &nbsp;&nbsp;&nbsp;
+        <button> 
+                <a href="https://en.wikipedia.org/wiki/Ray_LaMontagne">
+                    About Artist
+                </a>
+        </button>
         <br><br>
         <h3>Albums</h3>
+        <hr>
         <img
             src="images/Trouble.png"
             width="190"
@@ -49,7 +60,7 @@
             <b> <a href="#gossip">Gossip In the Grain</a></b>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            <b>Till the Sun Turns Black</b>
+            <b> <a href="#sun">Till the Sun Turns Black</a></b>
         </p>
         <p>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -135,9 +146,10 @@
                     3:17
                 </li>
             </ol>
+        </p>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <button><b>Listen</b></button>
+        <button><b>Listen <i class="fa-regular fa-circle-play"></i></b></button>
         <br><br>
         <hr>
         <br>
@@ -178,8 +190,124 @@
                     I Still Care For You&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;4:08
                 </li>
+                <li>
+                    Winter Birds&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    &nbsp;&nbsp;&nbsp;6:19
+                </li>
+                <li>
+                    Meg White&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;4:13
+                </li>
+                <li>
+                    Hey Me, Hey Mama&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    &nbsp;&nbsp;4:26
+                </li>
+                <li>
+                    Henry Nearly Killed Me&nbsp;&nbsp;&nbsp;&nbsp;4:23
+                </li>
+                <li>
+                    A Falling Through&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;4:26
+                </li>
+                <li>
+                    Gossip In The Grain&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    &nbsp;&nbsp;&nbsp;3:59
+                </li>
             </ol>
         </p>
-        
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <button><b>Listen <i class="fa-regular fa-circle-play"></i></b></button>
+        <br><br>
+        <hr>
+        <br>
+        <h2 id="sun">Till The Sun Turns Black</h2>
+        <hr>
+        <br>
+        <img
+            src="images/tillthesunturnsblack.jpg"
+            width="300"
+            alt="album cover - ray lamontagne - till the sun turns black"
+        >
+        <br>
+        <i class="fa-solid fa-thumbs-up"></i>
+        <b>96%</b> Liked This Album
+        <br>
+        <i class="fa-regular fa-object-group"></i>
+        <b>Genre:</b> Folk, Folk Rock
+        <br>
+        <i class="fa-solid fa-record-vinyl"></i>
+        <b>Label:</b> RCA Records
+        <p>
+            <h4>Tracks</h4>
+            <ol>
+                <li>
+                    Be Here Now&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;6:23
+                </li>
+                <li>
+                    Empty&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;5:17
+                </li>
+                <li>
+                    Barfly&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;3:55
+                </li>
+                <li>
+                    Three More Days&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    &nbsp;&nbsp;3:37
+                </li>
+                <li>
+                    Can I Stay&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    &nbsp;3:42
+                </li>
+                <li>
+                    You Can Bring Me Flowers&nbsp;&nbsp;&nbsp;&nbsp;4:12
+                </li>
+                <li>
+                    Gone Away From Me&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;4:27
+                </li>
+                <li>
+                    Lesson Learned&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    &nbsp;&nbsp;&nbsp;&nbsp;4:39
+                </li>
+                <li>
+                    Truly, Madly, Deeply&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1:53
+                </li>
+                <li>
+                    Till The Sun Turns Black&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    &nbsp;4:29
+                </li>
+                <li>
+                    Within You&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;5:43
+                </li>
+                <li>
+                    Can I Stay(Live)&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    &nbsp;&nbsp;4:20
+                </li>
+            </ol>
+        </p>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <button><b>Listen <i class="fa-regular fa-circle-play"></i></b></button>
+        <br><br>
+        <hr>
+        <br>
     </body>
 </html>
