--- a/exercises/color-palettes/index.html
+++ b/exercises/color-palettes/index.html
@@ -21,7 +21,7 @@
         </div>
 
         <div id="p1-c3">
-            <h3>Plum Orange</h3>
+            <h3>Plum-Orange</h3>
             <h4>#801336</h4>
         </div>
 
