--- a/demos/combining-selectors-demo/index.html
+++ b/demos/combining-selectors-demo/index.html
@@ -13,7 +13,7 @@
             <a href="#" class="warning">Contact</a>
             <div class="secondary-links">
                 <a href="#">Candy</a>
-                <a href="#">Popsicles</a>
+                <a href="#">Pastries</a>
                 <a href="#">Cake</a>
             </div>
         </div>
@@ -33,5 +33,26 @@
             asperiores</a> accusamus minus, distinctio quis pariatur 
             <a href="#">maiores.</a>
         </p>
+
+        <ul>
+            <li>
+                <a href="#">Item 1</a>
+            </li>
+            <li>
+                <p>
+                    Lorem ipsum dolor
+                    <a href="#">Item 2</a>
+                    rolod muspi merol
+                </p>
+            </li>
+            <li>
+                <div>
+                    Lorem ipsum dolor
+                    <a href="#">Item 3</a>
+                    rolod muspi merol
+                </div>
+            </li>
+        </ul>
+
     </body>
 </html>
