--- a/studio-gallery/index.html
+++ b/studio-gallery/index.html
@@ -32,13 +32,34 @@
 
                     <div class="display-space">
                         <!-- Add your code for your 2nd poster/piece here -->
-
-                        
+                        <div class="frame-2">
+                            <div>
+                                <img 
+                                    src="images/paint-3.jpg" 
+                                    alt="painting of face"
+                                >
+                            </div>
+                        </div>
                     </div>
 
                     <div class="display-space">
                         <!-- Add your code for your 3rd poster/piece here -->
+                        <div class="frame-3">
+                            <div>
+                              <p>Art Gallery</p>
+                            </div>
+                        </div>
+                    </div>
 
+                    <div class="display-space">
+                        <div class="frame-4">
+                            <div>
+                                <img 
+                                src="images/paint-2.jpg"
+                                alt="painting 2"
+                                >
+                            </div>
+                        </div>
                     </div>
 
                 </div>
