--- a/bulletin-board/index.html
+++ b/bulletin-board/index.html
@@ -10,9 +10,37 @@
     <body>
         <div id="bulletin-board">
             <!-- ADD YOUR HTML CODE INSIDE OF THIS DIV -->
-            <div class="post-it-1">
-                <h3>Content Division</h3>
-                <p> < div > < /div > </p>
+            <div class="container">
+                <div class="post-it-1">
+                    <h3>Content Division</h3>
+                    <p> < div > < /div > </p>
+                </div>
+
+                <div class="post-it-2">
+                    <h3>Add Spaces</h3>
+                    <p> & n b s p ; </p>
+                </div>
+
+                <div class="post-it-3">
+                    <h3>Unordered List</h3>
+                    <p> < ul > < /ul ></p>
+                </div>
+
+                <div class="post-it-4">
+                    <h3>Ordered List</h3>
+                    <p> < ol > < /ol > </p>
+                </div>
+
+                <div class="post-it-5">
+                    <h3>Image</h3>
+                    <p> < img > < /img > </p>
+                    <p> src: width: alt: </p>
+                </div>
+
+                <div class="post-it-6">
+                    <h3>Anchor</h3>
+                    <p> < a > < /a > </p>
+                </div>
             </div>
         </div>
     </body>
