--- a/bulletin-board/index.html
+++ b/bulletin-board/index.html
@@ -41,6 +41,13 @@
                     <h3>Anchor</h3>
                     <p> < a > < /a > </p>
                 </div>
+
+                <div class="post-it-7">
+                    <img 
+                        src="images/pngtree-sticky-note-sticky-communication-angle-png-image_12945893.png" 
+                        alt="post-its"
+                    >
+                </div>
             </div>
         </div>
     </body>
