--- a/wiki-with-sidebar/index.html
+++ b/wiki-with-sidebar/index.html
@@ -30,34 +30,41 @@
                         <a href="#early">Early Tarot</a>
                     </li>
                     <li>
-                        <a href="#decks">Decks</a>
+                        <a href="#prop">Propagation</a>
                     </li>
                     <li>
-                        <a href="#prop">Propagation</a>
+                        <a href="#etym">Etymology</a>
                     </li>
                 </ul>
             </div>
 
             <div id="main">
                 <h2 id="what-is">What is Tarot?</h2>
-                <p>
-                    Tarot (/ˈtæroʊ/, first known as trionfi and later as 
-                    tarocchi or tarocks) is a pack of playing cards, used from 
-                    at least the mid-15th century in various parts of Europe to 
-                    play card games such as Tarocchini. From their Italian 
-                    roots, tarot-playing cards spread to most of Europe, 
-                    evolving into a family of games that includes German 
-                    Grosstarok and modern games such as French Tarot and 
-                    Austrian Königrufen. In the late 18th century French 
-                    occultists made elaborate, but unsubstantiated, claims about 
-                    their history and meaning, leading to the emergence of 
-                    custom decks for use in divination via tarot card reading 
-                    and cartomancy. Thus, there are two distinct types of 
-                    tarot packs in circulation: those used for card games and 
-                    those used for divination. However, some older patterns, 
-                    such as the Tarot de Marseille, originally intended for 
-                    playing card games, are also used for cartomancy.
-                </p>
+                <div>
+                    <p class="p1">
+                        Tarot (/ˈtæroʊ/, first known as trionfi and later as 
+                        tarocchi or tarocks) is a pack of playing cards, used from 
+                        at least the mid-15th century in various parts of Europe to 
+                        play card games such as Tarocchini. From their Italian 
+                        roots, tarot-playing cards spread to most of Europe, 
+                        evolving into a family of games that includes German 
+                        Grosstarok and modern games such as French Tarot and 
+                        Austrian Königrufen. In the late 18th century French 
+                        occultists made elaborate, but unsubstantiated, claims about 
+                        their history and meaning, leading to the emergence of 
+                        custom decks for use in divination via tarot card reading 
+                        and cartomancy. Thus, there are two distinct types of 
+                        tarot packs in circulation: those used for card games and 
+                        those used for divination. However, some older patterns, 
+                        such as the Tarot de Marseille, originally intended for 
+                        playing card games, are also used for cartomancy.
+                    </p>
+                    <img 
+                        class="tarot-1"
+                        src="images/tarot1.jpg" 
+                        alt="Austrian Tarot Cards"
+                    >
+                </div>
                 <h3 id="suits">Suits</h3>
                 <p>
                     Like the common playing cards, tarot has four suits that 
@@ -104,13 +111,6 @@
 
                 <h2 id="history">History</h2>
                 <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-                    Eveniet quas est iusto laborum dicta in ducimus doloribus, 
-                    debitis quibusdam. Odio eaque harum earum neque. Blanditiis 
-                    expedita vitae ipsam error laudantium.
-                </p>
-                <h3 id="early">Early Tarot</h3>
-                <p>
                     Tarot cards, then known as tarocchi, first appeared in 
                     Ferrara and Milan in northern Italy, with the Fool and 21 
                     trumps (then called trionfi) being added to the standard 
@@ -152,7 +152,7 @@
                     classical motifs include the Sola-Busca and Boiardo-Viti 
                     decks of the 1490s.
                 </p>
-                <h4 id="decks">Early Decks</h4>
+                <h3 id="early">Early Tarot</h3>
                 <p>
                     The first documented tarot decks were recorded between 1440 
                     and 1450 in Milan, Ferrara, Florence and Bologna, when 
@@ -216,6 +216,25 @@
                     four elements, as well as traditional tarot motifs. The 
                     earliest known mention of this game, under the name of 
                     germini, dates to 1506.
+                </p>
+                <h4 id="etym">Etymology</h4>
+                <p>
+                    The word "tarot" and German Tarock derive from the 
+                    Italian Tarocchi, the origin of which is uncertain, although 
+                    taroch was used as a synonym for foolishness in the late 
+                    15th and early 16th centuries. The decks were known 
+                    exclusively as Trionfi during the fifteenth century. The new 
+                    name first appeared in Brescia around 1502 as Tarocho. 
+                    During the 16th century, a new game played with a standard 
+                    deck but sharing a very similar name (Trionfa) was quickly 
+                    becoming popular. This coincided with the older game being 
+                    renamed tarocchi. In modern Italian, the singular term is 
+                    Tarocco, which, as a noun, is a cultivar of blood orange. 
+                    The attribute Tarocco and the verb Taroccare are used 
+                    regionally to indicate that something is fake or forged. 
+                    This meaning is directly derived from the tarocchi game as 
+                    played in Italy, in which tarocco indicates a card that can 
+                    be played in place of another card.
                 </p>
             </div>
         </div>
