--- a/wiki-with-sidebar/index.html
+++ b/wiki-with-sidebar/index.html
@@ -43,21 +43,22 @@
                 <div>
                     <p class="p1">
                         Tarot (/ˈtæroʊ/, first known as trionfi and later as 
-                        tarocchi or tarocks) is a pack of playing cards, used from 
-                        at least the mid-15th century in various parts of Europe to 
-                        play card games such as Tarocchini. From their Italian 
-                        roots, tarot-playing cards spread to most of Europe, 
-                        evolving into a family of games that includes German 
-                        Grosstarok and modern games such as French Tarot and 
-                        Austrian Königrufen. In the late 18th century French 
-                        occultists made elaborate, but unsubstantiated, claims about 
-                        their history and meaning, leading to the emergence of 
-                        custom decks for use in divination via tarot card reading 
-                        and cartomancy. Thus, there are two distinct types of 
-                        tarot packs in circulation: those used for card games and 
-                        those used for divination. However, some older patterns, 
-                        such as the Tarot de Marseille, originally intended for 
-                        playing card games, are also used for cartomancy.
+                        tarocchi or tarocks) is a pack of playing cards, used 
+                        from at least the mid-15th century in various parts of 
+                        Europe to play card games such as Tarocchini. From their 
+                        Italian roots, tarot-playing cards spread to most of 
+                        Europe, evolving into a family of games that includes 
+                        German Grosstarok and modern games such as French Tarot 
+                        and Austrian Königrufen. In the late 18th century French 
+                        occultists made elaborate, but unsubstantiated, claims 
+                        about their history and meaning, leading to the 
+                        emergence of custom decks for use in divination via 
+                        tarot card reading and cartomancy. Thus, there are two 
+                        distinct types of tarot packs in circulation: those used 
+                        for card games and those used for divination. However, 
+                        some older patterns, such as the Tarot de Marseille, 
+                        originally intended for playing card games, are also 
+                        used for cartomancy.
                     </p>
                     <img 
                         class="tarot-1"
