--- a/mebay-product-page/index.html
+++ b/mebay-product-page/index.html
@@ -60,9 +60,8 @@
                     Foil Tarot Cards D...
                 </h3>
                 <i class="fa-solid fa-images"></i>
+                <a href="#">TakaeStore</a> (110)
                 <p id="p1">
-                    <a href="#">TakaeStore</a> (110)
-                    <br>
                     <a href="#">99.1% positive</a> 
                     &nbsp; 
                     <a href="#">Sellers Other Items</a>
@@ -85,19 +84,20 @@
                         <p>Last One &nbsp; 10 Sold</p>
                     </div>
                 </p>
-                <div id="button1">Buy It Now</div>
-                <div id="button2">Add to Cart</div>
-                <div id="button3">
+                <a href="#" id="button1">Buy It Now</a>
+                <a href="#" id="button2">Add To Cart</a>
+                <a href="#" id="button3">
                     <i class="fa-regular fa-heart"></i>
+                    &nbsp;
                     Add to Wishlist
-                </div>
+                </a>
                 <div id="people">
                     <br>
                     <i class="fa-solid fa-bolt"></i>
-                    <b>People want this.</b><i>21 people are watching this.</i>
+                    <b>People want this.</b><i> 21 people are watching this.</i>
                     <br>
                     <i class="fa-solid fa-bolt"></i>
-                    <b>This one is trending.</b><i>10 have already sold.</i>
+                    <b>This one is trending.</b><i> 10 have already sold.</i>
                 </div>
             </div>
         </div>
