--- a/mebay-product-page/index.html
+++ b/mebay-product-page/index.html
@@ -50,7 +50,8 @@
                     alt="gold foil tarot"
                     width="500"
                 >
-                <h4>Have one to sell? 
+                <h4>
+                    Have one to sell? 
                     <a href="#">Sell Now</a>
                 </h4>
             </div>
