--- a/product-showcase-site/index.html
+++ b/product-showcase-site/index.html
@@ -17,19 +17,19 @@
         </div>
         <div class="column">
             <div id="img-card">
-            <img 
-                id="new53"
-                src="images/53new.jpg" 
-                alt="pan pastel color palettes" 
-                width="300px"
-            >
-            <h2 id="new">53 New Colors!</h2>
-            <p id="new1">
-                Now with over 140 colors,<br>
-                Theres even more reason <br>
-                to paint with dry colors.
-            </p>
-        </div>
+                <img 
+                    id="new53"
+                    src="images/53new.jpg" 
+                    alt="pan pastel color palettes" 
+                    width="300px"
+                >
+                <h2 id="new">53 New Colors!</h2>
+                <p id="new1">
+                    Now with over 140 colors,<br>
+                    Theres even more reason <br>
+                    to paint with dry colors.
+                </p>
+            </div>
         </div>
         <hr>
         <div id="flex">
@@ -74,79 +74,82 @@
                         erasable, low dust, lightfast and professional artist’s 
                         quality.
                     </p>
-            </div>
-            <div id="card3">
-                <img 
-                    id="block"
-                    src="images/sofft.avif" 
-                    alt="pan pastel sofft tools"
-                    width="250px"
-                >
-                <h3 id="color-block">
-                    <a href="#" id="sofft">PanPastel Sofft Tools</a>
-                </h3>
-                <p id="color-block4">
-                    Sofft® Tools utilize a specially formulated micropore 
-                    sponge designed for optimal application of PanPastel 
-                    colors. Each tool has a unique shape and size based on 
-                    artist brushes, providing great variety in mark making 
-                    with PanPastel. They are re-usable & easy to clean (a 
-                    quick wipe on a paper towel is all that’s needed when 
-                    working with different colors) and can be used to apply 
-                    water-based media as well.
-                </p>
-            </div>
-        </div>
-        <hr>
-        <div id="flex2">
-            <h1 id="feat">Featured</h1>
-            <div id="left">
-                <div id="card4">
+                </div>
+                <div id="card3">
                     <img 
                         id="block"
-                        src="images/basic.avif" 
-                        alt="color test"
+                        src="images/sofft.avif" 
+                        alt="pan pastel sofft tools"
                         width="250px"
                     >
                     <h3 id="color-block">
-                        <a href="#" id="basic">Basic PanPastel Techniques</a>
-                    </h3>
-                    <p id="color-block2">
-                        A visual guide to some basic PanPastel Techniques.
-                    </p>
-                </div>
-                <div id="card5">
-                    <img 
-                        id="block"
-                        src="images/mixing.avif" 
-                        alt="pan pastels colors"
-                        width="250px"
-                    >
-                    <h3 id="color-block1">
-                        <a href="#" id="mix">Color Mixing with PanPastel</a>
-                    </h3>
-                    <p id="color-block3">
-                        A quick walkthrough of mixing colors with PanPastels.
-                    </p>
-                </div>
-                <div id="card6">
-                    <img 
-                        id="block"
-                        src="images/media.avif" 
-                        alt="mixed media"
-                        width="250px"
-                    >
-                    <h3 id="color-block">
-                        <a href="#" id="media">PanPastel Mixed Media</a>
+                        <a href="#" id="sofft">PanPastel Sofft Tools</a>
                     </h3>
                     <p id="color-block4">
-                        A visual overview of some of the mixed media techniques 
-                        available with PanPastel.
+                        Sofft® Tools utilize a specially formulated micropore 
+                        sponge designed for optimal application of PanPastel 
+                        colors. Each tool has a unique shape and size based on 
+                        artist brushes, providing great variety in mark making 
+                        with PanPastel. They are re-usable & easy to clean (a 
+                        quick wipe on a paper towel is all that’s needed when 
+                        working with different colors) and can be used to apply 
+                        water-based media as well.
                     </p>
                 </div>
-        </div>
-        <div id="div">
-            <a id="button" href="#">All Related Articles</a>
-        </div>
+            </div>
+            <hr>
+            <div id="flex2">
+                <h1 id="feat">Featured</h1>
+                <div id="left">
+                    <div id="card4">
+                        <img 
+                            id="block"
+                            src="images/basic.avif" 
+                            alt="color test"
+                            width="250px"
+                        >
+                        <h3 id="color-block">
+                            <a href="#" id="basic">
+                                Basic PanPastel Techniques
+                            </a>
+                        </h3>
+                        <p id="color-block2">
+                            A visual guide to some basic PanPastel Techniques.
+                        </p>
+                    </div>
+                    <div id="card5">
+                        <img 
+                            id="block"
+                            src="images/mixing.avif" 
+                            alt="pan pastels colors"
+                            width="250px"
+                        >
+                        <h3 id="color-block1">
+                            <a href="#" id="mix">Color Mixing with PanPastel</a>
+                        </h3>
+                        <p id="color-block3">
+                            A quick walkthrough of mixing colors with 
+                            PanPastels.
+                        </p>
+                    </div>
+                    <div id="card6">
+                        <img 
+                            id="block"
+                            src="images/media.avif" 
+                            alt="mixed media"
+                            width="250px"
+                        >
+                        <h3 id="color-block">
+                            <a href="#" id="media">PanPastel Mixed Media</a>
+                        </h3>
+                        <p id="color-block4">
+                            A visual overview of some of the mixed media 
+                            techniques available with PanPastel.
+                        </p>
+                    </div>
+                </div>
+                <div id="div">
+                    <a id="button" href="#">All Related Articles</a>
+                </div>
     </body>
 </html>
