--- a/product-showcase-site/index.html
+++ b/product-showcase-site/index.html
@@ -32,124 +32,130 @@
             </div>
         </div>
         <hr>
-        <div id="flex">
-            <h1 id="products">Products</h1>
-            <div id="left">
-                <div id="card1">
-                    <img 
-                        id="block"
-                        src="images/colors.avif" 
-                        alt="pan pastel color palettes"
-                        width="250px"
-                    >
-                    <h3 id="color-block">
-                        <a href="#" id="colors">PanPastel Colors</a>
-                    </h3>
-                    <p id="color-block2">
-                        PanPastel Colors are professional artist quality soft 
-                        pastels packed in a unique pan format. With colors that 
-                        are rich, ultra-soft and super-blendable, you can apply 
-                        PanPastel (dry) color like paint – making it great for 
-                        painting, drawing and mixed media. Each PanPastel color 
-                        is loaded with the finest quality artists’ pigments for 
-                        the most concentrated colors possible. The colors have 
-                        all been tested for lightfastness and are fully 
-                        erasable.
-                    </p>
-                </div>
-                <div id="card2">
-                    <img 
-                        id="block"
-                        src="images/mediums.avif" 
-                        alt="pan pastel mediums"
-                        width="250px"
-                    >
-                    <h3 id="color-block1">
-                        <a href="#" id="mediums">PanPastel Mediums</a>
-                    </h3>
-                    <p id="color-block3">
-                        Use PanPastel Mediums to extend the techniques and 
-                        finished effects that are possible. Mediums have all the 
-                        characteristics of PanPastel Colors, they are mixable, 
-                        erasable, low dust, lightfast and professional artist’s 
-                        quality.
-                    </p>
-                </div>
-                <div id="card3">
-                    <img 
-                        id="block"
-                        src="images/sofft.avif" 
-                        alt="pan pastel sofft tools"
-                        width="250px"
-                    >
-                    <h3 id="color-block">
-                        <a href="#" id="sofft">PanPastel Sofft Tools</a>
-                    </h3>
-                    <p id="color-block4">
-                        Sofft® Tools utilize a specially formulated micropore 
-                        sponge designed for optimal application of PanPastel 
-                        colors. Each tool has a unique shape and size based on 
-                        artist brushes, providing great variety in mark making 
-                        with PanPastel. They are re-usable & easy to clean (a 
-                        quick wipe on a paper towel is all that’s needed when 
-                        working with different colors) and can be used to apply 
-                        water-based media as well.
-                    </p>
-                </div>
-            </div>
-            <hr>
-            <div id="flex2">
-                <h1 id="feat">Featured</h1>
+        <div id="single">
+            <div id="flex">
+                <h1 id="products">Products</h1>
                 <div id="left">
-                    <div id="card4">
+                    <div id="card1">
                         <img 
                             id="block"
-                            src="images/basic.avif" 
-                            alt="color test"
+                            src="images/colors.avif" 
+                            alt="pan pastel color palettes"
                             width="250px"
                         >
                         <h3 id="color-block">
-                            <a href="#" id="basic">
-                                Basic PanPastel Techniques
-                            </a>
+                            <a href="#" id="colors">PanPastel Colors</a>
                         </h3>
                         <p id="color-block2">
-                            A visual guide to some basic PanPastel Techniques.
+                            PanPastel Colors are professional artist quality 
+                            soft pastels packed in a unique pan format. With 
+                            colors that are rich, ultra-soft and super-
+                            blendable, you can apply PanPastel (dry) color like 
+                            paint – making it great for painting, drawing and 
+                            mixed media. Each PanPastel color is loaded with the 
+                            finest quality artists’ pigments for the most 
+                            concentrated colors possible. The colors have all 
+                            been tested for lightfastness and are fully 
+                            erasable.
                         </p>
                     </div>
-                    <div id="card5">
+                    <div id="card2">
                         <img 
                             id="block"
-                            src="images/mixing.avif" 
-                            alt="pan pastels colors"
+                            src="images/mediums.avif" 
+                            alt="pan pastel mediums"
                             width="250px"
                         >
                         <h3 id="color-block1">
-                            <a href="#" id="mix">Color Mixing with PanPastel</a>
+                            <a href="#" id="mediums">PanPastel Mediums</a>
                         </h3>
                         <p id="color-block3">
-                            A quick walkthrough of mixing colors with 
-                            PanPastels.
+                            Use PanPastel Mediums to extend the techniques and 
+                            finished effects that are possible. Mediums have all 
+                            the characteristics of PanPastel Colors, they are 
+                            mixable, erasable, low dust, lightfast and 
+                            professional artist’s quality.
                         </p>
                     </div>
-                    <div id="card6">
+                    <div id="card3">
                         <img 
                             id="block"
-                            src="images/media.avif" 
-                            alt="mixed media"
+                            src="images/sofft.avif" 
+                            alt="pan pastel sofft tools"
                             width="250px"
                         >
                         <h3 id="color-block">
-                            <a href="#" id="media">PanPastel Mixed Media</a>
+                            <a href="#" id="sofft">PanPastel Sofft Tools</a>
                         </h3>
                         <p id="color-block4">
-                            A visual overview of some of the mixed media 
-                            techniques available with PanPastel.
+                            Sofft® Tools utilize a specially formulated 
+                            micropore sponge designed for optimal application of 
+                            PanPastel colors. Each tool has a unique shape and 
+                            size based on artist brushes, providing great 
+                            variety in mark making with PanPastel. They are 
+                            re-usable & easy to clean (a quick wipe on a paper 
+                            towel is all that’s needed when working with 
+                            different colors) and can be used to apply water-
+                            based media as well.
                         </p>
+                    </div>
+                </div>
+                <hr>
+                <div id="flex2">
+                    <h1 id="feat">Featured</h1>
+                    <div id="left">
+                        <div id="card4">
+                            <img 
+                                id="block"
+                                src="images/basic.avif" 
+                                alt="color test"
+                                width="250px"
+                            >
+                            <h3 id="color-block">
+                                <a href="#" id="basic">
+                                    Basic PanPastel Techniques
+                                </a>
+                            </h3>
+                            <p id="color-block2">
+                                A visual guide to some basic PanPastel Techniques.
+                            </p>
+                        </div>
+                        <div id="card5">
+                            <img 
+                                id="block"
+                                src="images/mixing.avif" 
+                                alt="pan pastels colors"
+                                width="250px"
+                            >
+                            <h3 id="color-block1">
+                                <a href="#" id="mix">Color Mixing with PanPastel</a>
+                            </h3>
+                            <p id="color-block3">
+                                A quick walkthrough of mixing colors with 
+                                PanPastels.
+                            </p>
+                        </div>
+                        <div id="card6">
+                            <img 
+                                id="block"
+                                src="images/media.avif" 
+                                alt="mixed media"
+                                width="250px"
+                            >
+                            <h3 id="color-block">
+                                <a href="#" id="media">PanPastel Mixed Media</a>
+                            </h3>
+                            <p id="color-block4">
+                                A visual overview of some of the mixed media 
+                                techniques available with PanPastel.
+                            </p>
+                        </div>
                     </div>
                 </div>
                 <div id="div">
                     <a id="button" href="#">All Related Articles</a>
                 </div>
+            </div>
+        </div>
     </body>
 </html>
