--- a/product-showcase-site/index.html
+++ b/product-showcase-site/index.html
@@ -117,7 +117,8 @@
                                 </a>
                             </h3>
                             <p id="color-block2">
-                                A visual guide to some basic PanPastel Techniques.
+                                A visual guide to some basic PanPastel 
+                                Techniques.
                             </p>
                         </div>
                         <div id="card5">
@@ -128,7 +129,9 @@
                                 width="250px"
                             >
                             <h3 id="color-block1">
-                                <a href="#" id="mix">Color Mixing with PanPastel</a>
+                                <a href="#" id="mix">
+                                    Color Mixing with PanPastel
+                                </a>
                             </h3>
                             <p id="color-block3">
                                 A quick walkthrough of mixing colors with 
@@ -151,11 +154,9 @@
                             </p>
                         </div>
                     </div>
-                </div>
-                <div id="div">
-                    <a id="button" href="#">All Related Articles</a>
-                </div>
+                </div> 
             </div>
+            <a id="button" href="#">All Related Articles</a>
         </div>
     </body>
 </html>
