--- a/metube-extra/index.html
+++ b/metube-extra/index.html
@@ -20,6 +20,29 @@
                         &nbsp;
                         <a href="#">Home</a>
                     </li>
+                    <li>
+                        <i class="fa-solid fa-film"></i>
+                        &nbsp;
+                        <a href="#">Shorts</a>
+                    </li>
+                    <li>
+                        <i class="fa-solid fa-star"></i>
+                        &nbsp;
+                        <a href="#">Subscriptions</a>
+                    </li>
+                    <li>
+                        <i class="fa-solid fa-photo-film"></i>
+                        &nbsp;
+                        <a href="#">Library</a>
+                    </li>
+                    <li>
+                        <i class="fa-solid fa-clock-rotate-left"></i>
+                        &nbsp;
+                        <a href="#">History</a>
+                    </li>
+                    <li>
+
+                    </li>
                 </ul>
             </div>
             
@@ -28,6 +51,18 @@
                     id="sketchcourse"
                     src="images/completesketchcourse.jpg" 
                     alt=""
+                    width="250px"
+                >
+                <img 
+                    id="pencilshading" 
+                    src="images/pencilshading.jpg" 
+                    alt="pencil shading easy" 
+                    width="250px"
+                >
+                <img 
+                    id="drawingexercise"
+                    src="images/drawingexercise.jpg" 
+                    alt="drawing exercise"
                     width="250px"
                 >
             </div>
